# Pentimento

./: .editorconfig  .gitignore  3DSvelte.md  Cargo.toml  Cross.toml  LICENSE  PAINTING_PLAN.md  README.md  justfile  launcher.sh  lefthook.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts  wasm_outline_history.md
.cargo/: config.toml
.github/workflows/: verify.yml
crates/app/: Cargo.toml
crates/app-wasm/: Cargo.toml
crates/app-wasm/src/: README.md  bridge.rs  lib.rs
crates/app/src/: config.rs  embedded_ui.rs  main.rs
crates/app/src/input/: README.md  backend.rs  hotkeys.rs  keyboard.rs  mod.rs  mouse.rs
crates/app/src/render/: README.md  mod.rs  ui_blend_material.rs  ui_cef.rs  ui_composite.rs  ui_dioxus.rs  ui_overlay.rs
crates/app/src/render/shaders/: ui_blend.wgsl
crates/app/src/render/ui_dioxus/: README.md  event_bridge.rs  ipc_handler.rs  mod.rs  render.rs  resources.rs  scene_builder.rs  setup.rs
crates/app/src/scene/: mod.rs
crates/cef-helper/: Cargo.toml
crates/cef-helper/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/diffusion/: Cargo.toml
crates/diffusion/src/: lib.rs  remote.rs
crates/dioxus-ui/: ARCHITECTURE.md  Cargo.toml  POPUP_MENU_PATTERN.md
crates/dioxus-ui/src/: README.md  app.rs  bridge.rs  document.rs  document_proxy.rs  lib.rs  net_provider.rs  renderer.rs  state.rs
crates/dioxus-ui/src/components/: README.md  add_object_menu.rs  brush_palette.rs  color_picker.rs  layers_panel.rs  mod.rs  paint_side_panel.rs  paint_toolbar.rs  side_panel.rs  slider.rs  toolbar.rs
crates/frontend-cef/: Cargo.toml
crates/frontend-cef/src/: browser.rs  capture.rs  devtools.rs  lib.rs
crates/frontend-core/: Cargo.toml
crates/frontend-core/src/: lib.rs
crates/frontend-dioxus/: Cargo.toml
crates/frontend-dioxus/src/: bridge.rs  lib.rs
crates/frontend-overlay/: Cargo.toml
crates/frontend-overlay/src/: lib.rs  sync.rs  window.rs
crates/frontend-webkit/: Cargo.toml
crates/frontend-webkit/src/: capture.rs  initialization.rs  input_keyboard.rs  input_mouse.rs  lib.rs  resize.rs  state.rs  utils.rs
crates/ipc/: Cargo.toml
crates/ipc/examples/: contract_samples.rs
crates/ipc/src/: README.md  error.rs  input.rs  lib.rs  messages.rs
crates/ipc/src/commands/: README.md  gizmo.rs  mesh_edit.rs  mod.rs  paint.rs
crates/ipc/src/types/: README.md  material.rs  mod.rs  scene.rs  settings.rs
crates/painting/: Cargo.toml
crates/painting/src/: brush.rs  constants.rs  half_edge.rs  layer.rs  lib.rs  log.rs  mesh_surface.rs  pipeline.rs  projection.rs  projection_target.rs  raycast.rs  surface.rs  tiles.rs  types.rs  validation.rs
crates/painting/src/half_edge/: construction.rs  mod.rs  modification.rs  topology.rs  types.rs  validation.rs
crates/painting/src/log/: dab_params.rs  events.rs  mod.rs  recorder.rs  storage.rs
crates/painting/src/pipeline/: mod.rs  stroke.rs  surface_ops.rs  undo.rs
crates/painting/src/tiles/: dab_application.rs  data_access.rs  dirty_tracking.rs  mod.rs
crates/scene/: Cargo.toml
crates/scene/src/: add_object.rs  ambient_occlusion.rs  camera.rs  canvas_plane.rs  edit_mode.rs  gizmo.rs  gizmo_raycast.rs  lib.rs  lighting.rs  mesh_edit_highlight.rs  mesh_edit_mode.rs  mesh_edit_selection.rs  mesh_paint_mode.rs  mesh_painting_system.rs  normal_indicator.rs  paint_mode.rs  painting_system.rs  pixel_coverage.rs  projection_mode.rs  projection_painting.rs  render_camera.rs  sculpt_mode.rs  selection.rs  wireframe.rs
crates/scene/src/depth_view/: mod.rs
crates/scene/src/depth_view/shaders/: depth_view.wgsl
crates/scene/src/gizmo/: hover.rs  input.rs  mod.rs  render.rs  state.rs  transform.rs
crates/scene/src/outline/: edge_detection.rs  id_material.rs  mod.rs  outline_settings.rs
crates/scene/src/outline/shaders/: edge_detection.wgsl  entity_id.wgsl
crates/sculpting/: Cargo.toml
crates/sculpting/src/: brush.rs  budget.rs  deformation.rs  gpu.rs  lib.rs  pipeline.rs  types.rs
crates/sculpting/src/chunking/: boundary.rs  merge.rs  mod.rs  partition.rs
crates/sculpting/src/spatial/: mod.rs
crates/sculpting/src/tessellation/: curvature.rs  edge_collapse.rs  edge_split.rs  metrics.rs  mod.rs
crates/webview/: Cargo.toml
crates/webview/examples/: capture_test.rs
crates/webview/src/: README.md  error.rs  lib.rs  platform_linux.rs  platform_linux_cef.rs  platform_linux_dioxus.rs  platform_linux_overlay.rs  platform_windows.rs
docs/: FIX_UI_DUPLICATION.md  paint_projection.md
docs/adr/: ADR-001-active-frontends-and-contract-ownership.md
scripts/: check-commit-message.sh  check-source-readmes.sh  rustfmt-active.sh  setup-cef.sh
src-electron/: README.md  main.js  main.ts  package.json  preload.js  preload.ts  test-electron.js  test.js  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/contracts/: ipc-contract.test.mjs
tests/ui/: bridge-lifecycle.test.ts
ui/: index.html
ui/src/: App.svelte  README.md  main.ts
ui/src/lib/: README.md  bridge.ts  types.ts
ui/src/lib/components/: AddObjectMenu.svelte  PaintToolbar.svelte  README.md  SidePanel.svelte  Toolbar.svelte
ui/src/styles/: README.md  global.css
