[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/webview",
    "crates/ipc",
    "crates/diffusion",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/puma/pentimento"

[workspace.dependencies]
# Core
bevy = { version = "0.18", default-features = false }
tokio = { version = "1.44", features = ["sync", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

# Webview
wry = "0.53"
raw-window-handle = "0.6"

# Image handling
image = "0.25"
bytemuck = { version = "1.21", features = ["derive"] }

# Diffusion (optional in crates that use them)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"

# Networking
tokio-tungstenite = "0.26"
futures-util = "0.3"

[workspace.lints.rust]
unsafe_code = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
