[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/app-wasm",
    "crates/config",
    "crates/scene",
    "crates/webview",
    "crates/ipc",
    "crates/diffusion",
    "crates/cef-helper",
    "crates/dioxus-ui",
    "crates/painting",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/puma/pentimento"

[workspace.dependencies]
# Core
bevy = { version = "0.18", default-features = false }
glam = "0.30"
tokio = { version = "1.44", features = ["sync", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

# Webview
wry = "0.53"
raw-window-handle = "0.6"

# Image handling
image = "0.25"
bytemuck = { version = "1.21", features = ["derive"] }

# Diffusion (optional in crates that use them)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"

# Networking
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Dioxus (native UI with Blitz WGPU renderer)
dioxus = "0.7"
dioxus-native = "0.7"

# Vello (GPU-accelerated 2D renderer used by Blitz)
# Version 0.7.0 uses wgpu 27 which is compatible with Bevy 0.18
vello = "0.7"

[workspace.lints.rust]
unsafe_code = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
