[package]
name = "pentimento-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pentimento Bevy app compiled to WASM for Tauri mode"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Selection works in Chromium (Electron) but crashes in WebKitGTK (Tauri)
selection = ["pentimento-scene/selection"]

[dependencies]
pentimento-config = { path = "../config" }
pentimento-scene = { path = "../scene" }
pentimento-ipc = { path = "../ipc" }

bevy = { workspace = true, default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_asset",
    "bevy_winit",
    "bevy_log",
    "bevy_mesh",
    "std",
    "webgl2",
] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CustomEvent",
    "CustomEventInit",
    "console",
] }
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
