[package]
name = "pentimento-cef-helper"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CEF subprocess helper for Pentimento"

[[bin]]
name = "pentimento-cef-helper"
path = "src/main.rs"

[dependencies]
# CEF (Chromium Embedded Framework) bindings
cef = "143.7"
