[package]
name = "pentimento-dioxus-ui"
version.workspace = true
edition.workspace = true

[dependencies]
pentimento-ipc = { path = "../ipc" }
dioxus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Bevy for render world integration
bevy = { workspace = true }

# Vello for GPU rendering - accessed via Bevy's shared wgpu device
vello = { workspace = true }

# Re-export wgpu types for the renderer interface
wgpu = "27"
