[package]
name = "pentimento-dioxus-ui"
version.workspace = true
edition.workspace = true

[dependencies]
pentimento-ipc = { path = "../ipc" }
dioxus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Bevy for render world integration
bevy = { workspace = true }

# Vello for GPU rendering - accessed via Bevy's shared wgpu device
vello = { workspace = true }

# Re-export wgpu types for the renderer interface
wgpu = "27"

# Blitz rendering pipeline (use git for anyrender 0.7 compatibility)
blitz-dom = { git = "https://github.com/DioxusLabs/blitz.git", branch = "main" }
blitz-paint = { git = "https://github.com/DioxusLabs/blitz.git", branch = "main" }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz.git", branch = "main" }
dioxus-native-dom = { git = "https://github.com/DioxusLabs/blitz.git", branch = "main" }

# AnyRender - the 2D drawing abstraction
anyrender = "0.7"
anyrender_vello = "0.7"

# Layout (used by blitz-dom)
taffy = "0.9"

# Curve/path types
peniko = "0.6"
kurbo = "0.13"
keyboard-types = "0.7"
