[package]
name = "pentimento-frontend-overlay"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Overlay-based frontend backend for Pentimento using transparent GTK windows"

[dependencies]
pentimento-frontend-core = { path = "../frontend-core" }
pentimento-ipc = { path = "../ipc" }

wry = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
raw-window-handle = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
gdkx11 = "0.18"
webkit2gtk = { version = "2.0", features = ["v2_40"] }
cairo-rs = { version = "0.18", features = ["use_glib"] }
gio = "0.18"
