[package]
name = "pentimento-scene"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared 3D scene setup for Pentimento (native and WASM builds)"

[dependencies]
bevy = { workspace = true, default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_asset",
    "bevy_log",
] }
