[package]
name = "pentimento-scene"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared 3D scene setup for Pentimento (native and WASM builds)"

[features]
default = []
# Wireframe requires POLYGON_MODE_LINE GPU feature (native only, not WASM/WebGL)
wireframe = []
# Selection requires mesh picking - works in Chromium but crashes WebKitGTK
selection = ["bevy/bevy_picking", "bevy/mesh_picking"]
# 3D mesh painting with normal-based brush projection
mesh_painting = ["bevy/bevy_picking", "bevy/mesh_picking"]
# Mesh editing mode for vertex, edge, and face manipulation
mesh_editing = ["bevy/bevy_picking", "bevy/mesh_picking", "painting/bevy", "selection"]
# 3D sculpting with dynamic tessellation
sculpting = ["bevy/bevy_picking", "bevy/mesh_picking", "painting/bevy", "dep:sculpting", "selection"]
# Atmospheric sky rendering - requires HDR (native only, not WASM/WebGL)
atmosphere = []

[dependencies]
pentimento-ipc = { path = "../ipc" }
painting = { path = "../painting", features = ["bevy"] }
sculpting = { path = "../sculpting", features = ["bevy"], optional = true }
bytemuck = { workspace = true }
wgpu = "27"

bevy = { workspace = true, default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_asset",
    "bevy_log",
    "bevy_gizmos",
] }
