[package]
name = "pentimento-webview"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pentimento-ipc = { path = "../ipc" }

wry = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
webkit2gtk = "2.0"
cairo-rs = { version = "0.20", features = ["png"] }
glib = "0.20"
gio = "0.20"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
] }
