[package]
name = "pentimento-webview"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pentimento-ipc = { path = "../ipc" }

wry = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }
raw-window-handle = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
webkit2gtk = { version = "2.0", features = ["v2_40"] }
cairo-rs = { version = "0.18", features = ["png", "use_glib"] }
glib = "0.18"
gio = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
] }

[[example]]
name = "capture_test"

[dev-dependencies]
image = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
gtk = "0.18"
